website/css/docs/style.css
/*
*
*   impress.js - documentation stylesheet
*
*       Created 2023 by Janis Hutz
*
*/

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-size: calc(16pt + 0.4vw);
    font-family: sans-serif;
}

.content {
    background-color: rgb(255, 255, 255);
    color: black;
    display: grid;
    grid-template-areas:
        'menu header header header header'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu main main main main'
        'menu footer footer footer footer';
}

.logo {
    width: 60%;
    height: auto;
    margin-left: 20%;
    margin-top: 5%;
    margin-bottom: 5%;
}

#nav {
    grid-area: menu;
    min-width: 20vw;
    width: 100%;
    height: 100%;
    overflow: scroll;
}

#docPage {
    max-width: 75vw;
    margin: 0;
    grid-area: main;
    overflow: scroll;
}

#doc-container {
    width: 90%;
    margin: 5%;
    max-height: 70vh;
}

#footer {
    grid-area: footer;
}

#top {
    grid-area: header;
}

